--- a/app/assets/stylesheets/v2_theme.scss
+++ b/app/assets/stylesheets/v2_theme.scss
@@ -196,3 +196,9 @@ table.dataTable tbody tr.selected {
   min-width: 110px;
 }
 
+.vertical-resizable-panel {
+  resize: vertical !important;
+  overflow-y: auto !important;
+  overflow-x: hidden !important;
+  min-height: 50px !important;
+}
