Cache panel height

--- a/app/views/dispatchers/_run_manifest_table.html.haml
+++ b/app/views/dispatchers/_run_manifest_table.html.haml
@@ -9,7 +9,7 @@
     background-color: yellow;
   }
 
-%table.table.table-striped.table-bordered.run-manifest-table{style: 'max-height: 300px; overflow-y: auto;'}
+%table.table.table-striped.table-bordered.run-manifest-table
   %thead
     %tr
       %th
