--- a/app/views/dispatchers/index.html.haml
+++ b/app/views/dispatchers/index.html.haml
@@ -27,8 +27,11 @@
   // Local Storages
   // dispatch_loaded_run_ids = [] (list of run panels that are open)
   // dispatch_runs_panel_collapsed: 1/0 (0 if the runs panel is collapsed)
+  // dispatch_runs_panel_height
   // dispatch_run_panel_{id}_collapsed: 1/0 (0 if a specific run panel is collapsed)
+  // dispatch_run_panel_{id}_height
   // dispatch_unassigned_trips_collapsed: 1/0 (0 if the unassigned trips panel is collapsed)
+  // dispatch_unassigned_trips_height
 
   // update one trip schedule status
   function schedule_trip(trip_id, run_id, prev_run_id) {
@@ -95,24 +98,28 @@
     panel.find('.panel-body').slideUp();
     panel.find('.panel-expand-collapse').addClass('panel-collapsed');
     panel.find('.panel-expand-collapse i').removeClass('fa-chevron-up').addClass('fa-chevron-down'); 
+    panel.find('.floatThead-wrapper').hide();
   }
 
   function expand_panel(panel) {
     panel.find('.panel-body').slideDown();
     panel.find('.panel-expand-collapse').removeClass('panel-collapsed');
     panel.find('.panel-expand-collapse i').removeClass('fa-chevron-down').addClass('fa-chevron-up');
+    panel.find('.floatThead-wrapper').show();
   }
 
   function reverse_collapse_panel(panel) {
     panel.find('.panel-body').slideUp();
     panel.find('.panel-expand-collapse-reverse').addClass('panel-collapsed');
     panel.find('.panel-expand-collapse-reverse i').removeClass('fa-chevron-down').addClass('fa-chevron-up'); 
+    panel.find('.floatThead-wrapper').hide();
   }
 
   function reverse_expand_panel(panel) {
     panel.find('.panel-body').slideDown();
     panel.find('.panel-expand-collapse-reverse').removeClass('panel-collapsed');
     panel.find('.panel-expand-collapse-reverse i').removeClass('fa-chevron-up').addClass('fa-chevron-down'); 
+    panel.find('.floatThead-wrapper').show();
   }
 
   function collapse_run_manifest(run_id) {
@@ -137,6 +144,11 @@
           scroll_to_run_trips_panel(run_id);
         }
 
+        var prev_height = parseInt(localStorage.getItem('dispatch_run_panel_' + run_id + '_height'));
+        if(prev_height > 0) {
+          $("#run_trips_panel_" + run_id + " .panel-body").height(prev_height);
+        }
+
         var was_collapsed = localStorage.getItem('dispatch_run_panel_' + run_id + '_collapsed');
         if(was_collapsed == '0') {
           collapse_run_manifest(run_id);
@@ -157,6 +169,11 @@
 
   // load previously open run manifest panels
   function load_runs_panel() {
+    var prev_height = parseInt(localStorage.getItem('dispatch_runs_panel_height'));
+    if(prev_height > 0) {
+      $('#runs_panel .panel-body').height(prev_height);
+    }
+
     var was_collapsed = localStorage.getItem('dispatch_runs_panel_collapsed');
     if(was_collapsed == '0') {
       // by default, collapse Unassigned Trips panel
@@ -189,6 +206,11 @@
 
   // expand or collapse given previous state
   function load_unassigned_trips_panel() {
+    var prev_height = parseInt(localStorage.getItem('dispatch_unassigned_trips_height'));
+    if(prev_height > 0) {
+      $('#unassigned_trips_panel .panel-body').height(prev_height);
+    }
+
     var was_collapsed = localStorage.getItem('dispatch_unassigned_trips_collapsed');
     if(was_collapsed != '1') {
       // by default, collapse Unassigned Trips panel
@@ -389,6 +411,7 @@
         // clean up local storage
         var run_id = $panel.data('run-id');
         localStorage.removeItem('dispatch_run_panel_' + run_id + '_collapsed');
+        localStorage.removeItem('dispatch_run_panel_' + run_id + '_height');
         var loaded_run_ids = get_loaded_run_id_array();
         var run_id_index = loaded_run_ids.indexOf(run_id.toString());
         if(run_id_index >= 0) {
@@ -480,5 +503,15 @@
 
     load_runs_panel();
     load_unassigned_trips_panel();
+
+    // cache panel heights before closing the screen
+    $(window).on('beforeunload', function(){
+      // dispatch_runs_panel_height
+      localStorage.setItem('dispatch_runs_panel_height', $('#runs_panel .panel-body').height());
+      localStorage.setItem('dispatch_unassigned_trips_height', $('#unassigned_trips_panel .panel-body').height());
+      $('.run_trips_panel').each(function() {
+        localStorage.setItem('dispatch_run_panel_' + $(this).data('run-id') + '_height', $(this).find('.panel-body').height());
+      });
+    });
   });
   
