--- a/app/views/dispatchers/_runs_panel.html.haml
+++ b/app/views/dispatchers/_runs_panel.html.haml
@@ -20,5 +20,5 @@
           = "Total runs: #{stats.join(', ')}"
         - else
           = translate_helper(:empty_runs)
-  .panel-body
+  .panel-body.vertical-resizable-panel
     = render 'runs_table'
