--- a/app/views/dispatchers/_unassigned_trips_panel.html.haml
+++ b/app/views/dispatchers/_unassigned_trips_panel.html.haml
@@ -21,5 +21,5 @@
     %h3.panel-title.text-center
       = render 'unassigned_trips_panel_title'
 
-  .panel-body.vertical-resizable-panel
+  .panel-body
     = render 'dispatchers/unassigned_trips_table', trips: trips
