--- a/app/views/recurring_dispatchers/_runs_panel.html.haml
+++ b/app/views/recurring_dispatchers/_runs_panel.html.haml
@@ -17,5 +17,5 @@
           = "Total runs: #{@runs.count}"
         - else
           = translate_helper(:empty_runs)
-  .panel-body
+  .panel-body.vertical-resizable-panel
     = render 'runs_table'
