--- a/app/views/recurring_dispatchers/_unassigned_trips_table.html.haml
+++ b/app/views/recurring_dispatchers/_unassigned_trips_table.html.haml
@@ -1,13 +1,4 @@
-%table.table.table-striped.table-bordered#unassigned_trips_table{:data => {:toggle => 'table',
-    :pagination => 'false',
-    :show_pagination_switch => 'false',
-    :page_list => "[5, 10, 20]",
-    :page_size => 5,
-    :search => 'false',
-    :show_export => 'false',
-    :show_columns => 'false',
-    :show_toggle => 'false',
-    :height => 200}}
+%table.table.table-striped.table-bordered#unassigned_trips_table
   %thead
     %tr
       %th
