--- a/app/views/addresses/_provider_common_address.html.haml
+++ b/app/views/addresses/_provider_common_address.html.haml
@@ -3,7 +3,7 @@
     = address.address_group.try(:name)
   %td.name
     = link_to_if can?(:edit, ProviderCommonAddress), address.name || '' , edit_provider_common_address_path(address)
-  %td= address.address
+  %td= address.coded_by_lat_lng? ? address.address_text : address.address
   %td= address.city
   %td= address.state
   %td= format_phone_number address.phone_number
