--- a/app/views/reports/forms/_ineligible_customer_status_report.html.haml
+++ b/app/views/reports/forms/_ineligible_customer_status_report.html.haml
@@ -1,3 +1,4 @@
 = form_for @query, :url=>url_for(:action=>:ineligible_customer_status_report), :html=>{:method=>:get} do |f| 
   %fieldset
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
+    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
