--- a/app/views/reports/forms/_customers_report.html.haml
+++ b/app/views/reports/forms/_customers_report.html.haml
@@ -4,3 +4,4 @@
     = f.collection_select :mobility_id, @all_mobilities, :id, :name, {include_blank: 'All'}
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
+    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
