--- a/app/views/reports/forms/_provider_common_location_report.html.haml
+++ b/app/views/reports/forms/_provider_common_location_report.html.haml
@@ -4,3 +4,4 @@
     = f.collection_select :address_group_id, AddressGroup.all, :id, :name, include_blank: 'All Types'
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: false, f: f
+    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
