--- a/app/views/reports/forms/_vehicle_monthly_service_report.html.haml
+++ b/app/views/reports/forms/_vehicle_monthly_service_report.html.haml
@@ -7,3 +7,4 @@
     = f.collection_select :vehicle_id, @active_vehicles, :id, :name, {include_blank: 'All'}
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
+    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
