--- a/app/views/reports/forms/_driver_report.html.haml
+++ b/app/views/reports/forms/_driver_report.html.haml
@@ -1,7 +1,9 @@
-= form_for @query, :url=>url_for(:action=>:driver_report), :html=>{:method=>:get} do |f| 
+:ruby
+  action_name = @saved_report ? :show_saved_report : @custom_report.name
+= form_for @query, :url=>url_for(:action=>action_name), :html=>{:method=>:get} do |f| 
   %fieldset
     = f.label :driver_id, "#{translate_helper(:driver)}:"
     = f.collection_select :driver_id, @active_drivers, :id, :user_name, {include_blank: 'All'}
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
-    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
+    = render 'reports/forms/save_report_controls', custom_report_id: @custom_report.id
