--- a/app/views/reports/forms/_inactive_driver_status_report.html.haml
+++ b/app/views/reports/forms/_inactive_driver_status_report.html.haml
@@ -1,4 +1,6 @@
-= form_for @query, :url=>url_for(:action=>:inactive_driver_status_report), :html=>{:method=>:get} do |f| 
+:ruby
+  action_name = @saved_report ? :show_saved_report : @custom_report.name
+= form_for @query, :url=>url_for(:action=>action_name), :html=>{:method=>:get} do |f| 
   %fieldset
     %label
       = "#{translate_helper(:report_format)}:"
@@ -9,4 +11,4 @@
       = f.select :report_type, options_for_select([['Permanent Inactive Drivers Report', 'perm_inacitve'],['Temporary Inactive Drivers Report', 'detail']], @query.report_type || 'temp_inactive')
 
     = f.submit translate_helper("run"), class: 'btn action-button'
-    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
+    = render 'reports/forms/save_report_controls', custom_report_id: @custom_report.id
