--- a/app/views/reports/forms/_provider_common_location_report.html.haml
+++ b/app/views/reports/forms/_provider_common_location_report.html.haml
@@ -1,7 +1,9 @@
-= form_for @query, :url=>url_for(:action=>:provider_common_location_report), :html=>{:method=>:get} do |f| 
+:ruby
+  action_name = @saved_report ? :show_saved_report : @custom_report.name
+= form_for @query, :url=>url_for(:action=>action_name), :html=>{:method=>:get} do |f| 
   %fieldset
     = f.label :address_group_id, "Address Type:"
     = f.collection_select :address_group_id, AddressGroup.all, :id, :name, include_blank: 'All Types'
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: false, f: f
-    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
+    = render 'reports/forms/save_report_controls', custom_report_id: @custom_report.id
