--- a/app/views/reports/forms/_customer_donation_report.html.haml
+++ b/app/views/reports/forms/_customer_donation_report.html.haml
@@ -1,8 +1,10 @@
-= form_for @query, :url=>url_for(:action=>:customer_donation_report), :html=>{:method=>:get} do |f| 
+:ruby
+  action_name = @saved_report ? :show_saved_report : @custom_report.name
+= form_for @query, :url=>url_for(:action=>action_name), :html=>{:method=>:get} do |f| 
   %fieldset
     = f.date_select  :start_date, :order => [:month,:day,:year] rescue nil
     = translate_helper("through") 
     = f.date_select  :before_end_date, :order => [:month,:day,:year] rescue nil
 
     = render 'reports/forms/v2_reports/common_controls', has_multiple_report_types: true, f: f
-    = render 'reports/forms/save_button', custom_report_id: @custom_report.id
+    = render 'reports/forms/save_report_controls', custom_report_id: @custom_report.id
