--- a/app/views/vehicles/_details_panel.html.haml
+++ b/app/views/vehicles/_details_panel.html.haml
@@ -35,7 +35,11 @@
     .form-group
       = f.label :reportable, translate_helper("vehicle_form_reportable_label"), class: "col-md-2 control-label"
       .col-md-10
-        = f.select :reportable, [["Yes", "true"], ["No", "false"]], {:selected => @vehicle.reportable.to_s }, class: "form-control", disabled: @readonly
+        = f.select :reportable, [["Yes", true], ["No", false]], {:selected => @vehicle.reportable }, class: "form-control", disabled: @readonly
+    .form-group
+      = f.label :ntd_reportable, translate_helper("ntd_reportable_label"), class: "col-md-2 control-label"
+      .col-md-10
+        = f.select :ntd_reportable, [["Yes", true], ["No", false]], {:selected => @vehicle.ntd_reportable }, class: "form-control", disabled: @readonly
     .form-group
       = label_tag nil, translate_helper("vehicle_form_initial_mileage"), class: "col-md-2 control-label"
       .col-md-10
