--- a/app/views/reports/forms/_manifest.html.haml
+++ b/app/views/reports/forms/_manifest.html.haml
@@ -1,5 +1,6 @@
 :ruby
   action_name = @saved_report ? :show_saved_report : @custom_report.name
+
 = form_for @query, :url=>url_for(:action=>action_name), :html=>{:method=>:get} do |f| 
   %fieldset
     .date-select{style: 'display: inline-block;'}
@@ -8,7 +9,7 @@
       = f.date_select  :before_end_date, :order => [:month,:day,:year], :html => {:class => "date-select"} rescue nil
     
     %label
-      = "#{translate_helper(:run)}:"
+      Runs:
       =f.hidden_field :run_ids
       = render 'reports/forms/run_multiple_dropdown', runs: @all_runs, selected_runs: @runs || @all_runs
     
